--- a/module_android/app/build.gradle
+++ b/module_android/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation project(':flutter')
+    implementation project(':flutter_boost')
 
 }
