--- a/module_android/app/src/main/AndroidManifest.xml
+++ b/module_android/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
 
         </activity>
 
+        <activity android:name=".MainAActivity"/>
+
 
         <meta-data
             android:name="flutterEmbedding"
