--- a/module_flutter/pubspec.yaml
+++ b/module_flutter/pubspec.yaml
@@ -24,13 +24,16 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   flutter_boost:
     git:
-      url: 'https://github.com/alibaba/flutter_boost.git'
-      ref: '1.17.1'
+      url: 'https://github.com/Everyone-Happy/flutter_boost.git'
+      ref: 'v1.17.1-hotfixes-qm+5'
+#      url: 'https://github.com/alibaba/flutter_boost.git'
+#      ref: '1.17.1'
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +47,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/image/
 
   # To add Flutter specific assets to your application, add an assets section, 
   # like this:
